code/jvm/demo/src/main/kotlin/com/example/demo/http/errors/GamesCountError.kt
package com.example.demo.http.errors

import com.example.demo.domain.Either

sealed class GamesCountError {
    object InvalidId : GamesCountError()
}

typealias GamesCountFetchResult = Either<GamesCountError, Int>